--- a/CodeNameFive/Cell/Trip history/tripBottomCell/TripData.xib
+++ b/CodeNameFive/Cell/Trip history/tripBottomCell/TripData.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -23,8 +23,8 @@
                 <rect key="frame" x="0.0" y="0.0" width="331" height="66"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Gcl-Ee-Jo1">
-                        <rect key="frame" x="20" y="18" width="39.5" height="38"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Gcl-Ee-Jo1">
+                        <rect key="frame" x="20" y="16.5" width="39.5" height="33"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bnA-cT-sdH">
                                 <rect key="frame" x="0.0" y="0.0" width="39.5" height="19"/>
@@ -33,7 +33,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jmT-8M-iw4">
-                                <rect key="frame" x="0.0" y="24" width="39.5" height="14"/>
+                                <rect key="frame" x="0.0" y="19" width="39.5" height="14"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
                                 <color key="textColor" name="secondaryColor"/>
                                 <nil key="highlightedColor"/>
@@ -50,7 +50,7 @@
                 <constraints>
                     <constraint firstAttribute="bottom" secondItem="CQU-KH-Yr6" secondAttribute="bottom" constant="10" id="40m-nD-FDP"/>
                     <constraint firstItem="Gcl-Ee-Jo1" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="4zC-R4-XMt"/>
-                    <constraint firstAttribute="bottom" secondItem="Gcl-Ee-Jo1" secondAttribute="bottom" constant="10" id="64V-9T-B5X"/>
+                    <constraint firstItem="Gcl-Ee-Jo1" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="DLN-MY-vwH"/>
                     <constraint firstItem="CQU-KH-Yr6" firstAttribute="leading" relation="lessThanOrEqual" secondItem="Gcl-Ee-Jo1" secondAttribute="trailing" constant="179.5" id="JLm-Vh-MTF"/>
                     <constraint firstItem="CQU-KH-Yr6" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="MZg-0w-FHF"/>
                     <constraint firstItem="CQU-KH-Yr6" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="UM4-ku-3zG"/>
