--- a/CodeNameFive/Cell/Trip history/tripTopCell/TripDataTopCell.xib
+++ b/CodeNameFive/Cell/Trip history/tripTopCell/TripDataTopCell.xib
@@ -37,7 +37,7 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="iB3-sC-LW7" firstAttribute="centerY" secondItem="Otp-qs-mqI" secondAttribute="centerY" id="5ly-gZ-rTK"/>
-                    <constraint firstItem="Otp-qs-mqI" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="NMv-oz-soq"/>
+                    <constraint firstItem="Otp-qs-mqI" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="CIo-CD-vcL"/>
                     <constraint firstItem="Otp-qs-mqI" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="NTR-eu-WBK"/>
                     <constraint firstAttribute="bottom" secondItem="iB3-sC-LW7" secondAttribute="bottom" constant="10" id="X1o-sE-oof"/>
                     <constraint firstAttribute="trailing" secondItem="iB3-sC-LW7" secondAttribute="trailing" constant="20" id="ecS-XH-lBJ"/>
